tests/sqlcmd/baselines/errors/load_classes1.errbaseline
Unexpected Ad Hoc Planning Error: java.lang.RuntimeException: Error compiling query: org.voltdb.planner.PlanningErrorException: SQL Syntax error in "LOAD" unexpected token: LOAD
